# data-preparation-2026-group-project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/project/: main.py
src/project/baked_artifacts/: README.md  download_baked_artifacts.py
src/project/cleaning/: advanced_cleaning.py  clean.py  cleaning_generic.py  cleaning_view.ipynb  run_clean_all.py  suggest_cleaning_params.py
src/project/corruption/: ArrayCorruption.py  README.md  main_error_injection.py  visualize_corruption.py
src/project/corruption/array_corruption/: ConstantNoiseCorruption.py  CoordinateInaccuracy.py  MultipleSpikeCorruption.py  RandomNoiseCorruption.py  corrupt_data.py  create_example_file.py
src/project/notebooks/: comparison.ipynb  main.ipynb  test_inference.ipynb  test_inference_biking_3variants.ipynb
src/project/notebooks/modelling/: README.md  data_splitting.ipynb  model.ipynb
src/project/scripts/: generate_clean_data.py
src/project/scripts/dataset/: 1_dataset_download.sh  2_dataset_preparation.py  3_dataset_splitting.py  4_dataset_preprocessing.py  README.md  dataset_make.sh  dataset_preprocessing.py
src/project/scripts/modelling/: README.md  training.py
src/project/temp/biking/: biking_fitrec_model.pt  biking_static_ordinal_encoder.pkl  biking_user_standard_scaler.pkl
src/project/temp/running/: running_fitrec_model.pt  running_static_ordinal_encoder.pkl  running_user_standard_scaler.pkl
src/project/temp/walking/: walking_fitrec_model.pt  (+2 more)
src/project/utils/: my_utils.py
test/: pipeline_concept.py  test_array_corruption.py
(+11 files in other folders)
