[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "miautawn", email = "miautawn@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "torch>=2.9.1",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
