[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "miautawn", email = "miautawn@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "gdown>=5.2.1",
    "ipykernel>=7.1.0",
    "kaggle>=1.8.3",
    "kaleido>=1.2.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pyarrow>=23.0.0",
    "ruff>=0.14.13",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
